--- a/pc/UI_ADHPCdS02.html
+++ b/pc/UI_ADHPCdS02.html
@@ -61,19 +61,18 @@
 
                                         <div class="my_ptcp_from">
                                             <div class="box_group_wrap mt40">
-                                                <h3 class="t1_sb icon_add"><i class="icon num02"></i><span>경력개발로드맵 등록</span></h3>
+                                                <h2 class="t1_sb icon_add"><i class="icon num02"></i><span>경력개발로드맵 등록</span></h2>
                                                 <div class="prof_tit_twin mt16">
                                                     <h3 class="t2_sb">참여자 정보</h3>
-                                                    <button class="btn medium type02 btn_prof_edit" type="button"><span>회원정보 수정</span></button>
                                                 </div>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
                                                         <caption>성명, 전공/학과, 학번, 학적 상태, 학년, 학기 을(를) 제공하는 표</caption>
                                                         <colgroup>
                                                             <col style="width:20%">
-                                                            <col style="width:30%">
+                                                            <col style="width:auto">
                                                             <col style="width:20%">
-                                                            <col style="width:30%">
+                                                            <col style="width:auto">
                                                         </colgroup>
                                                         <tbody>
                                                             <tr>
@@ -173,7 +172,7 @@
                                                                 <td class="td_hopejob">
                                                                     <span class="box_ipt new_ipt">
                                                                         <label for="jobId1" class="sr_only">희망 직업 1</label>
-                                                                        <input type="text" class="input_txt" id="jobId1" name="jobId1" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="">
+                                                                        <input type="text" class="input_txt newipt_w192" id="jobId1" name="jobId1" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="">
                                                                         <button type="reset" class="newbtn_del btn medium type02 type_gray"><span>삭제</span></button>
                                                                         <button type="button" class="btn medium type01"><span>적용</span></button>
                                                                     </span>
@@ -185,7 +184,7 @@
                                                                 <td class="td_hopejob">
                                                                     <span class="box_ipt new_ipt">
                                                                         <label for="jobId2" class="sr_only">희망 직업 2</label>
-                                                                        <input type="text" class="input_txt" id="jobId2" name="jobId2" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="">
+                                                                        <input type="text" class="input_txt newipt_w192" id="jobId2" name="jobId2" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="">
                                                                         <button type="reset" class="newbtn_del btn medium type02 type_gray"><span>삭제</span></button>
                                                                         <button type="button" class="btn medium type01"><span>적용</span></button>
                                                                     </span>
@@ -196,9 +195,9 @@
                                                                     <span>희망 신직업</span>
                                                                 </th>
                                                                 <td colspan="3" class="td_hopejob">
-                                                                    <span class="box_ipt new_ipt">
+                                                                    <span class="box_ipt new_ipt newipt_full">
                                                                         <label for="jobId3" class="sr_only">희망 신직업</label>
-                                                                        <input type="text" class="input_txt" id="jobId3" name="jobId3" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="">
+                                                                        <input type="text" class="input_txt " id="jobId3" name="jobId3" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="">
                                                                         <button type="reset" class="newbtn_del btn medium type02 type_gray"><span>삭제</span></button>
                                                                         <button type="button" class="btn medium type01"><span>적용</span></button>
                                                                     </span>
@@ -210,7 +209,7 @@
                                                 <ul class="notice_hopejob">
                                                     <li>최소 1개 이상의 ‘희망 직업’을 등록해야 하며, ‘희망 직업 2’, ‘희망 신직업’은 선택 등록 사항입니다.</li>
                                                     <li>희망 직업 입력 후 적용버튼을 클릭하면 하단 단기계획 및 중장기 계획에 입력한 직업명이 반영됩니다.</li>
-                                                    <li>희망 직업업을 적용하고 ‘삭제’버튼을 클릭하면 하단의 단기계획 및 중장기 계획에 입력한 내용도 함께 삭제됩니다.</li>
+                                                    <li>희망 직업을 적용하고 ‘삭제’버튼을 클릭하면 하단의 단기계획 및 중장기 계획에 입력한 내용도 함께 삭제됩니다.</li>
                                                     <li>특수문자는 사용할 수 없습니다.</li>
                                                 </ul>
                                             </div>
@@ -293,7 +292,7 @@
                                                                 </td>
                                                                 <td>
                                                                     <div class="type_area box_radio_group">
-                                                                        <ul class="item_type radio_box_twin">
+                                                                        <ul class="item_type radio_box_twin js_c">
                                                                             <li>
                                                                                 <div class="new_radio_item">
                                                                                     <input type="radio" id="onCampus1" name="institution">
@@ -309,7 +308,7 @@
                                                                         </ul>
                                                                     </div>
                                                                 </td>
-                                                                <td CL>
+                                                                <td>
                                                                     <button type="button" class="btn small type02 type_gray btn_w52"><span>삭제</span></button>
                                                                     <button type="button" class="btn small type01 btn_w52"><span>추가</span></button>
                                                                 </td>
@@ -379,7 +378,7 @@
                                                                         </div>
                                                                     </div>
                                                                 </td>
-                                                                <td CL>
+                                                                <td>
                                                                     <button type="button" class="btn small type02 type_gray btn_w52"><span>삭제</span></button>
                                                                     <button type="button" class="btn small type01 btn_w52"><span>추가</span></button>
                                                                 </td>
@@ -468,7 +467,7 @@
                                                                 </td>
                                                                 <td>
                                                                     <div class="type_area box_radio_group">
-                                                                        <ul class="item_type radio_box_twin">
+                                                                        <ul class="item_type radio_box_twin js_c">
                                                                             <li>
                                                                                 <div class="new_radio_item">
                                                                                     <input type="radio" id="on2" name="institution">
@@ -484,7 +483,7 @@
                                                                         </ul>
                                                                     </div>
                                                                 </td>
-                                                                <td CL>
+                                                                <td>
                                                                     <button type="button" class="btn small type02 type_gray btn_w52"><span>삭제</span></button>
                                                                     <ul class="td_move_btn">
                                                                         <li><button type="button" class="move_up"><span class="sr_only">위로 이동</span></button></li>
@@ -544,7 +543,7 @@
                                                                 </td>
                                                                 <td>
                                                                     <div class="type_area box_radio_group">
-                                                                        <ul class="item_type radio_box_twin">
+                                                                        <ul class="item_type radio_box_twin js_c">
                                                                             <li>
                                                                                 <div class="new_radio_item">
                                                                                     <input type="radio" id="onCampus3" name="institution">
@@ -560,7 +559,7 @@
                                                                         </ul>
                                                                     </div>
                                                                 </td>
-                                                                <td CL>
+                                                                <td>
                                                                     <button type="button" class="btn small type02 type_gray btn_w52"><span>삭제</span></button>
                                                                     <ul class="td_move_btn">
                                                                         <li><button type="button" class="move_up"><span class="sr_only">위로 이동</span></button></li>
@@ -620,7 +619,7 @@
                                                                 </td>
                                                                 <td>
                                                                     <div class="type_area box_radio_group">
-                                                                        <ul class="item_type radio_box_twin">
+                                                                        <ul class="item_type radio_box_twin js_c">
                                                                             <li>
                                                                                 <div class="new_radio_item">
                                                                                     <input type="radio" id="onCampus4" name="institution">
@@ -636,7 +635,7 @@
                                                                         </ul>
                                                                     </div>
                                                                 </td>
-                                                                <td CL>
+                                                                <td>
                                                                     <button type="button" class="btn small type02 type_gray btn_w52"><span>삭제</span></button>
                                                                     <button type="button" class="btn small type01 btn_w52"><span>추가</span></button>
                                                                     <ul class="td_move_btn">
@@ -711,7 +710,7 @@
                                                                         </div>
                                                                     </div>
                                                                 </td>
-                                                                <td CL>
+                                                                <td>
                                                                     <button type="button" class="btn small type02 type_gray btn_w52"><span>삭제</span></button>
                                                                     <button type="button" class="btn small type01 btn_w52"><span>추가</span></button>
                                                                 </td>
