--- a/pc/UI_ADHPCdS03.html
+++ b/pc/UI_ADHPCdS03.html
@@ -61,10 +61,9 @@
 
                                         <div class="my_ptcp_from">
                                             <div class="box_group_wrap mt40">
-                                                <h3 class="t1_sb icon_add"><i class="icon num02"></i><span>경력개발로드맵 등록</span></h3>
+                                                <h2 class="t1_sb icon_add"><i class="icon num02"></i><span>경력개발로드맵 등록</span></h2>
                                                 <div class="prof_tit_twin mt16">
                                                     <h3 class="t2_sb">참여자 정보</h3>
-                                                    <button class="btn medium type02 btn_prof_edit" type="button"><span>회원정보 수정</span></button>
                                                 </div>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
@@ -173,7 +172,7 @@
                                                                 <td class="td_hopejob">
                                                                     <span class="box_ipt new_ipt">
                                                                         <label for="jobId1" class="sr_only">희망 직업 1</label>
-                                                                        <input type="text" class="input_txt" id="jobId1" name="jobId1" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="직업명 1">
+                                                                        <input type="text" class="input_txt newipt_w192" id="jobId1" name="jobId1" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="직업명 1">
                                                                         <button type="reset" class="newbtn_del btn medium type02 type_gray"><span>삭제</span></button>
                                                                         <button type="button" class="btn medium type01"><span>적용</span></button>
                                                                     </span>
@@ -185,7 +184,7 @@
                                                                 <td class="td_hopejob">
                                                                     <span class="box_ipt new_ipt">
                                                                         <label for="jobId2" class="sr_only">희망 직업 2</label>
-                                                                        <input type="text" class="input_txt" id="jobId2" name="jobId2" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="직업명 2">
+                                                                        <input type="text" class="input_txt newipt_w192" id="jobId2" name="jobId2" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="직업명 2">
                                                                         <button type="reset" class="newbtn_del btn medium type02 type_gray"><span>삭제</span></button>
                                                                         <button type="button" class="btn medium type01"><span>적용</span></button>
                                                                     </span>
@@ -196,7 +195,7 @@
                                                                     <span>희망 신직업</span>
                                                                 </th>
                                                                 <td colspan="3" class="td_hopejob">
-                                                                    <span class="box_ipt new_ipt">
+                                                                    <span class="box_ipt new_ipt newipt_full">
                                                                         <label for="jobId3" class="sr_only">희망 신직업</label>
                                                                         <input type="text" class="input_txt" id="jobId3" name="jobId3" placeholder="직업명을 입력해 주세요." title="직업명 입력" value="직업명 3">
                                                                         <button type="reset" class="newbtn_del btn medium type02 type_gray"><span>삭제</span></button>
@@ -210,7 +209,7 @@
                                                 <ul class="notice_hopejob">
                                                     <li>최소 1개 이상의 ‘희망 직업’을 등록해야 하며, ‘희망 직업 2’, ‘희망 신직업’은 선택 등록 사항입니다.</li>
                                                     <li>희망 직업 입력 후 적용버튼을 클릭하면 하단 단기계획 및 중장기 계획에 입력한 직업명이 반영됩니다.</li>
-                                                    <li>희망 직업업을 적용하고 ‘삭제’버튼을 클릭하면 하단의 단기계획 및 중장기 계획에 입력한 내용도 함께 삭제됩니다.</li>
+                                                    <li>희망 직업을 적용하고 ‘삭제’버튼을 클릭하면 하단의 단기계획 및 중장기 계획에 입력한 내용도 함께 삭제됩니다.</li>
                                                     <li>특수문자는 사용할 수 없습니다.</li>
                                                 </ul>
                                             </div>
@@ -293,7 +292,7 @@
                                                                 </td>
                                                                 <td>
                                                                     <div class="type_area box_radio_group">
-                                                                        <ul class="item_type radio_box_twin">
+                                                                        <ul class="item_type radio_box_twin js_c">
                                                                             <li>
                                                                                 <div class="new_radio_item">
                                                                                     <input type="radio" id="onCampus1" name="institution1" checked>
@@ -468,7 +467,7 @@
                                                                 </td>
                                                                 <td>
                                                                     <div class="type_area box_radio_group">
-                                                                        <ul class="item_type radio_box_twin">
+                                                                        <ul class="item_type radio_box_twin js_c">
                                                                             <li>
                                                                                 <div class="new_radio_item">
                                                                                     <input type="radio" id="on2" name="institution2" checked>
@@ -587,7 +586,7 @@
                                                                     <td>
                                                                         <div class="text_form_box">
                                                                             <div class="text_form_inner">
-                                                                                <textarea name="promiseArea" maxlength="1000" aria-describedby="promiseHelp2 promiseCount2" placeholder="나의 다짐을 입력해 주세요.">입력한 목표활동</textarea>
+                                                                                <textarea name="promiseArea" maxlength="1000" aria-describedby="promiseHelp2 promiseCount2" placeholder="나의 다짐을 입력해 주세요.">입력한 다짐 내용</textarea>
                                                                             </div>
                                                                             <div class="text_info">
                                                                                 <p class="sr_only" id="promiseHelp2">최대 1,000 Byte까지 입력 가능합니다.</p>
