--- a/pc/UI_ADHPCdS04.html
+++ b/pc/UI_ADHPCdS04.html
@@ -70,10 +70,7 @@
 
                                         <div class="my_ptcp_from">
                                             <div class="box_group_wrap mt40">
-                                                <div class="prof_tit_twin">
-                                                    <h3 class="t2_sb">참여자 정보</h3>
-                                                    <button class="btn medium type02 btn_prof_edit" type="button"><span>회원정보 수정</span></button>
-                                                </div>
+                                                <h3 class="t2_sb">참여자 정보</h3>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
                                                         <caption>성명, 전공/학과, 학번, 학적 상태, 학년, 학기 을(를) 제공하는 표</caption>
@@ -298,6 +295,24 @@
                                                                     </div>
                                                                     <div class="desc_box"><p>클라이언트 요구 분석, 시스템 설계 및 구현 과정에 참여했으며 프로젝트 관리 툴을 활용해 일정 조율과 팀원 간 소통을 원활히 하였고, 이를 통해 실무 경험과 문제 해결 능력을 키웠습니다.</p></div>
                                                                 </td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+
+                                            <div class="box_group_wrap box_promise_wrap">
+                                                <h3 class="t2_sb">나의 다짐</h3>
+                                                <div class="box_table_wrap write type01">
+                                                    <table class="box_table"><caption>나의 다짐 내용 을(를) 제공하는 표</caption>
+                                                        <colgroup>
+                                                            <col style="width:192px">
+                                                            <col style="width:calc(100% - 192px);">
+                                                        </colgroup>
+                                                        <tbody>
+                                                            <tr>
+                                                                <th>내용</th>
+                                                                <td>입력한 다짐 내용</td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
