--- a/pc/UI_ADHPCfM01_4.html
+++ b/pc/UI_ADHPCfM01_4.html
@@ -338,8 +338,8 @@
                                                                     <button type="button" class="btn small type01">변경신청</button>
                                                                 </td>
                                                                 <td>
-                                                                    <button type="button" class="arrow_btn arr_btn_open" onclick="toggleDetail(4)"><span class="sr_only">열기</span></button>
-                                                                    <button type="button" class="arrow_btn arr_btn_close" onclick="toggleDetail(4)"><span class="sr_only">닫기</span></button>
+                                                                    <button type="button" class="arrow_btn arr_btn_open" onclick="toggleDetail(4)"><span class="sr_only">페이지 접기</span></button>
+                                                                    <button type="button" class="arrow_btn arr_btn_close" onclick="toggleDetail(4)"><span class="sr_only">페이지 펼치기</span></button>
                                                                 </td>
                                                             </tr>
                                                             <tr class="detail_row_container">
