--- a/index_univ.html
+++ b/index_univ.html
@@ -227,7 +227,7 @@
                     <td>상담이력(빌드업)</td>
                     <td>빌드업 - 상담이력_목록</td>
                     <td>UI_ADHPCcM01</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>                   
                         <a href="./pc/UI_ADHPCcM01-1.html" target="_blank">PC-1</a>
@@ -243,7 +243,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_목록</td>
                     <td>UI_ADHPCdM01</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdM01-1.html" target="_blank">PC-1</a>
@@ -259,10 +259,10 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_등록</td>
                     <td>UI_ADHPCdS02</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/빌드업-UI_ADHPCdS02.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCdS02.html" target="_blank">PC</a>
                     </td>
                 </tr>
                 <tr>
@@ -274,7 +274,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_수정</td>
                     <td>UI_ADHPCdS03</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS03.html" target="_blank">PC</a>
@@ -290,7 +290,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_조회(제출후)</td>
                     <td>UI_ADHPCdS04</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS04.html" target="_blank">PC</a>
@@ -305,7 +305,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_수정(제출후_보완요청)</td>
                     <td>UI_ADHPCdS05</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS05.html" target="_blank">PC</a>
@@ -320,7 +320,7 @@
                     <td>경력개발로드맵(빌드업)</td>
                     <td>빌드업 - 경력개발로드맵_수정(제출승인후-변경신청)</td>
                     <td>UI_ADHPCdS06</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS06.html" target="_blank">PC</a>
@@ -333,9 +333,9 @@
                     <td>대학 재학생 맞춤형 고용서비스</td>
                     <td>참여신청서</td>
                     <td>경력개발로드맵(빌드업)</td>
-                    <td></td>
+                    <td>빌드업 - 경력개발로드맵_조회(변경신청후-회수)</td>
                     <td>UI_ADHPCdS07</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCdS07.html" target="_blank">PC</a>
@@ -350,7 +350,7 @@
                     <td>참여신청서(점프업)</td>
                     <td>점프업 - 참여신청서조회</td>
                     <td>UI_ADHPCbM10</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM10.html" target="_blank">PC</a>
@@ -365,10 +365,11 @@
                     <td>상담이력(점프업)</td>
                     <td>점프업 - 상담이력_목록있음</td>
                     <td>UI_ADHPCcM02</td>
-                    <td class="status"></td>
+                    <td class="status">PC완료</td>
                     <td></td>
                     <td>
-                        <a href="./pc/UI_ADHPCcM02.html" target="_blank">PC</a>
+                        <a href="./pc/UI_ADHPCcM02-1.html" target="_blank">PC-1</a>
+                        <a href="./pc/UI_ADHPCcM02-2.html" target="_blank">PC-2</a>
                     </td>
                 </tr>
                 <tr>
