--- a/pc/UI_ADHPCbM10.html
+++ b/pc/UI_ADHPCbM10.html
@@ -114,7 +114,7 @@
                                                                     <span class="sr_only">필수 입력</span>
                                                                 </th>
                                                                 <td colspan="3">
-                                                                    <fieldset class="box_radio_group type_unselect">
+                                                                    <fieldset class="box_radio_group" disabled>
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
                                                                         <div class="new_radio_item">
                                                                             <input type="radio" class="ptcpType1" id="ptcpType1" name="ptcpType" value="graduate" checked>
@@ -172,11 +172,11 @@
 
                                             <div class="box_group_wrap prof_radio_wrap">
                                                 <h3 class="t2_sb">참여 유형 선택</h3>
-                                                <div class="type_area box_radio_group type_unselect">
+                                                <div class="type_area box_radio_group">
                                                     <ul class="item_type">
                                                         <li>
                                                             <div class="new_radio_item">
-                                                                <input type="radio" id="빌드업프로젝트" name="참여유형선택">
+                                                                <input type="radio" id="빌드업프로젝트" name="참여유형선택" disabled>
                                                                 <label for="빌드업프로젝트">
                                                                     <span class="w">
                                                                         <span class="t">빌드업 프로젝트</span>
@@ -187,7 +187,7 @@
                                                         </li>
                                                         <li>
                                                             <div class="new_radio_item">
-                                                                <input type="radio" id="점프업프로젝트" name="참여유형선택" checked>
+                                                                <input type="radio" id="점프업프로젝트" name="참여유형선택" checked disabled>
                                                                 <label for="점프업프로젝트">
                                                                     <span class="w">
                                                                         <span class="t">점프업 프로젝트</span>
@@ -201,7 +201,7 @@
                                             </div>
 
                                             <div class="box_group_wrap">
-                                                <h3 class="t2_sb hreq_mark">개인정보 수집·이용·제공에 대한 동의서</h3>
+                                                <h3 class="t2_sb">개인정보 수집·이용·제공에 대한 동의서</h3>
                                                 <div class="agm_area">
                                                     <div class="agm_box">
                                                         <div class="agm_desc">
@@ -212,7 +212,7 @@
                                                     </div>
                                                     
                                                     <div class="agm_cho">
-                                                        <fieldset class="box_radio_group type_unselect" role="radiogroup" aria-labelledby="agmLabel">
+                                                        <fieldset class="box_radio_group" role="radiogroup" aria-labelledby="agmLabel" disabled>
                                                             <legend id="agmLabel" class="sr_only">개인정보 수집·이용·제공 동의</legend>                                                            
                                                             <div class="new_radio_item">
                                                                 <input type="radio" id="agmType1" name="agmType" value="yes" checked>
@@ -235,7 +235,7 @@
 
 
                                             <div class="box_group_wrap">
-                                                <h3 class="t2_sb hreq_mark">사업참여기간</h3>
+                                                <h3 class="t2_sb">사업참여기간</h3>
                                                 <div class="box_table_wrap write type01">
                                                     <table class="box_table">
                                                         <caption>참여기간 시작일, 참여기간 종료일 을(를) 제공하는 표</caption>
@@ -323,13 +323,7 @@
                                         $ptcpType2.on('change', toggleGradeWrap);
                                     });
 
-                                    // unselect 일때 radio 비활성화
-                                    $(function(){
-                                        $('.box_radio_group.type_unselect input[type="radio"]').on('click', function(e){
-                                            e.preventDefault();          
-                                            $(this).prop('checked', false); 
-                                        });
-                                    });
+
 
                                     // 신청 및 처리현황 토글 on/off
                                     $(document).ready(function() {
