--- a/index_univ.html
+++ b/index_univ.html
@@ -95,6 +95,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM01.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -110,6 +111,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbM02.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbM02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -125,6 +127,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbP03.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbP03.html" target="_blank">MO-Pop</a>
                     </td>
                 </tr>
                 <tr>
@@ -141,6 +144,8 @@
                     <td>
                         <a href="./pc/UI_ADHPCbS04-1.html" target="_blank">PC-1</a>
                         <a href="./pc/UI_ADHPCbS04-2.html" target="_blank">PC-2</a>
+                        <a href="./mobile/UI_ADHPCbS04.html" target="_blank">MO</a>
+
                     </td>
                 </tr>
                 <tr>
@@ -156,6 +161,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS05.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbS05.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -171,6 +177,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPCbS06.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPCbS06.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
